Sitecore 911 support added

--- a/Source/FortisCollections.Toolcore.Publish.Runner/App.config
+++ b/Source/FortisCollections.Toolcore.Publish.Runner/App.config
@@ -11,7 +11,7 @@
     <applicationSettings>
         <FortisCollections.Toolcore.Publish.Runner.Properties.Settings>
             <setting name="ServiceFolder" serializeAs="String">
-                <value/>
+              <value>sitecore/service/</value>
             </setting>
             <setting name="ServiceFileName" serializeAs="String">
                 <value>Publishing.asmx</value>
