--- a/Source/FortisCollections.Toolcore.Update/packages.config
+++ b/Source/FortisCollections.Toolcore.Update/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Sitecore.Kernel.NoReferences" version="8.2.170407" targetFramework="net452" developmentDependency="true" />
+  <package id="Sitecore.Kernel" version="9.3.0" targetFramework="net472" />
   <package id="Sitecore.Logging.NoReferences" version="8.2.170407" targetFramework="net452" developmentDependency="true" />
   <package id="Sitecore.Update.NoReferences" version="8.2.170407" targetFramework="net452" developmentDependency="true" />
   <package id="Sitecore.Zip.NoReferences" version="8.2.170407" targetFramework="net452" developmentDependency="true" />
