--- a/Source/FortisCollections.Toolcore.Publish.Runner/FortisCollections.Toolcore.Publish.Runner.csproj
+++ b/Source/FortisCollections.Toolcore.Publish.Runner/FortisCollections.Toolcore.Publish.Runner.csproj
@@ -8,7 +8,7 @@
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>FortisCollections.Toolcore.Publish.Runner</RootNamespace>
-    <AssemblyName>FortisCollections.Toolcore.Update</AssemblyName>
+    <AssemblyName>FortisCollections.Toolcore.Publish.Runner</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
