.NET Version upgrade and nuget fix

--- a/Source/FortisCollections.Toolcore.Indexing.Runner/app.config
+++ b/Source/FortisCollections.Toolcore.Indexing.Runner/app.config
@@ -1,19 +1,22 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="FortisCollections.Toolcore.Indexing.Runner.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+            <section name="FortisCollections.Toolcore.Indexing.Runner.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
         </sectionGroup>
     </configSections>
     <system.serviceModel>
-        <bindings />
-        <client />
+        <bindings/>
+        <client/>
     </system.serviceModel>
     <applicationSettings>
         <FortisCollections.Toolcore.Indexing.Runner.Properties.Settings>
-            <setting name="ServiceFolder" serializeAs="String">
-                <value />
-            </setting>
+            <!--<setting name="ServiceFolder" serializeAs="String">
+                <value/>
+            </setting>-->
+          <setting name="ServiceFolder" serializeAs="String">
+            <value>sitecore/service/</value>
+          </setting>
             <setting name="ServiceFileName" serializeAs="String">
                 <value>Indexing.asmx</value>
             </setting>
@@ -26,10 +29,9 @@
             <setting name="RetryInterval" serializeAs="String">
                 <value>00:00:05</value>
             </setting>
-            <setting name="FortisCollections_Toolcore_Indexing_Runner_Indexing_Indexing"
-                serializeAs="String">
+            <setting name="FortisCollections_Toolcore_Indexing_Runner_Indexing_Indexing" serializeAs="String">
                 <value>http://scpackageinstaller/Indexing.asmx</value>
             </setting>
         </FortisCollections.Toolcore.Indexing.Runner.Properties.Settings>
     </applicationSettings>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/></startup></configuration>
