--- a/Source/FortisCollections.Toolcore.Publish.Runner/packages.config
+++ b/Source/FortisCollections.Toolcore.Publish.Runner/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommandLineParser" version="1.9.71" targetFramework="net472" />
+  <package id="Sitecore.Kernel" version="9.3.0" targetFramework="net472" />
 </packages>
